corrected mobile spacing

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -93,7 +93,7 @@ h2 {
 }
 .sample.mobile iframe {
   width: 71.4%;
-  margin: 3.6% auto 3em;
+  margin: 3.6% auto 4.5%;
 }
 .sample .bg {
   position: absolute;
